--- a/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
@@ -17,7 +17,7 @@
                             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                             <polyline points="9 22 9 12 15 12 15 22"></polyline>
                         </svg>
-                        <span class="ml-4">Dashboards</span>
+                        <span class="ml-4">Bảng điều khiển</span>
                     </a>
                 </li>
                 
@@ -30,7 +30,15 @@
                         <span class="ml-4">Quản lý nhân viên</span>
                     </a>
                 </li>
-                
+                <li class="">
+                    <a href="/KeHoachCongViecs" class="svg-icon">
+                        <svg class="svg-icon" width="25" height="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path>
+                            <rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect>
+                        </svg>
+                        <span class="ml-4">Kế hoạch công việc</span>
+                    </a>
+                </li>
                 
             </ul>
         </nav>
