--- a/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
@@ -42,6 +42,18 @@
                         <span class="ml-4">Quản lý bộ phận</span>
                     </a>
                 </li>
+                <li class="">
+                    <a href="/KhuVucs" class="svg-icon">
+                        <i class="fa-solid fa-users-rectangle"></i>
+                        <span class="ml-4">Quản lý khu vực</span>
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/VaiTroes" class="svg-icon">
+                        <i class="fa-solid fa-users-rectangle"></i>
+                        <span class="ml-4">Quản lý vai trò</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         
