--- a/QLGV_DTSoft/Views/NguoiDungs/Edit.cshtml
+++ b/QLGV_DTSoft/Views/NguoiDungs/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Chỉnh sửa</h1>
 
-<h4>NguoiDung</h4>
+<h4>Thông tin người dùng</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,63 +15,78 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdNd" />
             <div class="form-group">
-                <label asp-for="IdVt" class="control-label"></label>
+                <label asp-for="IdVt" class="control-label">Vai trò</label>
                 <select asp-for="IdVt" class="form-control" asp-items="ViewBag.IdVt"></select>
                 <span asp-validation-for="IdVt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdBp" class="control-label"></label>
+                <label asp-for="IdBp" class="control-label">Bộ phận</label>
                 <select asp-for="IdBp" class="form-control" asp-items="ViewBag.IdBp"></select>
                 <span asp-validation-for="IdBp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Tennguoidung" class="control-label"></label>
+                <label asp-for="Tennguoidung" class="control-label">Tên đăng nhập</label>
                 <input asp-for="Tennguoidung" class="form-control" />
                 <span asp-validation-for="Tennguoidung" class="text-danger"></span>
             </div>
+           
+                
+                <input type="hidden" asp-for="Matkhau"  />
+                
+           
             <div class="form-group">
-                <label asp-for="Matkhau" class="control-label"></label>
-                <input asp-for="Matkhau" class="form-control" />
-                <span asp-validation-for="Matkhau" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Hoten" class="control-label"></label>
+                <label asp-for="Hoten" class="control-label">Tên người dùng</label>
                 <input asp-for="Hoten" class="form-control" />
                 <span asp-validation-for="Hoten" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ngaysinh" class="control-label"></label>
+                <label asp-for="Ngaysinh" class="control-label">Ngày sinh</label>
                 <input asp-for="Ngaysinh" class="form-control" />
                 <span asp-validation-for="Ngaysinh" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Gioitinh" class="control-label"></label>
+                <label asp-for="Gioitinh" class="control-label">Giới tính</label>
                 <input asp-for="Gioitinh" class="form-control" />
                 <span asp-validation-for="Gioitinh" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sodienthoai" class="control-label"></label>
+                <label asp-for="Sodienthoai" class="control-label">Số điện thoại</label>
                 <input asp-for="Sodienthoai" class="form-control" />
                 <span asp-validation-for="Sodienthoai" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Diachi" class="control-label"></label>
+                <label asp-for="Diachi" class="control-label">Địa chỉ</label>
                 <input asp-for="Diachi" class="form-control" />
                 <span asp-validation-for="Diachi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Quequan" class="control-label">Quê quán</label>
+                <input asp-for="Quequan" class="form-control" />
+                <span asp-validation-for="Quequan" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Ngaybatdaulam" class="control-label">Ngày bắt đầu làm việc</label>
+                <input asp-for="Ngaybatdaulam" class="form-control" />
+                <span asp-validation-for="Ngaybatdaulam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label">Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Thamnien" class=" control-label">Thâm niên</label>
+                <input asp-for="Thamnien" class="form-control" />
+                <span asp-validation-for="Thamnien" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Về danh sách</a>
 </div>
 
