--- a/QLGV_DTSoft/Views/KeHoachGiaoViecs/Details.cshtml
+++ b/QLGV_DTSoft/Views/KeHoachGiaoViecs/Details.cshtml
@@ -1,61 +1,51 @@
 ﻿@model QLGV_DTSoft.Data.KeHoachGiaoViec
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết kế hoạch giao việc có ID:" + @Model.IdKh;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Chi tiết kế hoạch giao việc có ID: @Model.IdKh</h1>
 
-<div>
+<hr />
 
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            Tên kế hoạch
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tenkehoach)
-        </dd>
-        <dt class = "col-sm-2">
-            Ngày bắt đầu
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ngaybatdau)
-        </dd>
-        <dt class = "col-sm-2">
-           Ngày kết thúc
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ngayketthuc)
-        </dd>
-        <dt class = "col-sm-2">
-            Mô tả kế hoạch
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Motakh)
-        </dd>
-        <dt class = "col-sm-2">
-            Ngày tạo kế hoạch
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ngaytaokh)
-        </dd>
-        <dt class = "col-sm-2">
-            Bộ phận phụ trách
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdBpNavigation.Tenbophan)
-        </dd>
-        <dt class = "col-sm-2">
-            Năm thực hiện
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdKhcvNavigation.NamthuchienFormatted)
-        </dd>
-    </dl>
+<div class="row">
+    <div class="col-md-6">
+        <h4>Thông tin chi tiết:</h4>
+        <dl class="row">
+            <dt class="col-sm-4">Tên kế hoạch:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.Tenkehoach)</dd>
+
+            <dt class="col-sm-4">Ngày bắt đầu:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.Ngaybatdau)</dd>
+
+            <dt class="col-sm-4">Ngày kết thúc:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.Ngayketthuc)</dd>
+
+            <dt class="col-sm-4">Mô tả kế hoạch:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.Motakh)</dd>
+
+            <dt class="col-sm-4">Ngày tạo kế hoạch:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.Ngaytaokh)</dd>
+
+            <dt class="col-sm-4">Bộ phận phụ trách:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.IdBpNavigation.Tenbophan)</dd>
+
+            <dt class="col-sm-4">Năm thực hiện:</dt>
+            <dd class="col-sm-8">@Html.DisplayFor(model => model.IdKhcvNavigation.NamthuchienFormatted)</dd>
+        </dl>
+    </div>
+    <div class="col-md-6">
+        <h4>Các chỉ tiêu:</h4>
+        <ul>
+            @foreach (var chitieu in Model.ChiTieus)
+            {
+                <li>@chitieu.Tenchitieu (@chitieu.Motact)</li>
+            }
+        </ul>
+    </div>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.IdKh" class="btn btn-success">Chỉnh sửa</a> |
-    <a asp-action="Index">Trở về danh sách</a>
+    <a asp-action="Index" class="btn btn-primary">Trở về danh sách</a>
 </div>
