--- a/QLGV_DTSoft/Views/Shared/_AuthLayout.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_AuthLayout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Webkit | Responsive Bootstrap 4 Admin Dashboard Template</title>
+    <title>DTSoft</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
