--- a/QLGV_DTSoft/Views/Shared/_Layout.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
         @Html.Partial("_Topbar")
         <div class="content-page">
             <div class="container-fluid">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item active" aria-current="page">@ViewData["Title"]</li>
+                    </ol>
+                </nav>
+
                 @RenderBody()
             </div>
         </div>
