gửi mail khi tạo nhân viên, kết xuất nhân viên theo bộ phận

--- a/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
@@ -54,6 +54,12 @@
                         <span class="ml-4">Quản lý vai trò</span>
                     </a>
                 </li>
+                <li class="">
+                    <a href="/Ketxuat" class="svg-icon">
+                        <i class="fa-solid fa-users-rectangle"></i>
+                        <span class="ml-4">Kết xuất</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         
