--- a/QLGV_DTSoft/Views/Home/Index.cshtml
+++ b/QLGV_DTSoft/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 <!-- loader Start -->
-<div id="loading">
-    <div id="loading-center">
+<div style='color: #0098a1; width: 100%; height: 100%;'>
+    <div style='text-align: center; padding-top: 20%; font-weight: 500;font-size: 70px;'>
+            QUẢN LÝ KẾ HOẠCH GIAO VIỆC DTSOFT
     </div>
 </div>
